// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevealPrivateCredential renders reveal SRP correctly when the credential is directly passed 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentContainerStyle={
        {
          "flex": 1,
        }
      }
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <RCTScrollView
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontWeight": "400",
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Your
                 
                <Text
                  accessibilityRole="text"
                  onPress={[Function]}
                  style={
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Secret Recovery Phrase
                </Text>
                 
                gives
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  full access to your wallet, funds and accounts.


                </Text>
                MetaMask is a
                 
                <Text
                  accessibilityRole="text"
                  onPress={[Function]}
                  style={
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  non-custodial wallet.
                   
                </Text>
                That means,
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  you are the owner of your Secret Recovery Phrase.
                </Text>
              </Text>
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "backgroundColor": "#ca35421a",
                      "borderColor": "#ca3542",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "marginTop": 16,
                      "padding": 20,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexShrink": 1,
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <SvgMock
                    color="#ca3542"
                    fill="currentColor"
                    height={24}
                    name="EyeSlash"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                        "marginLeft": 10,
                        "marginRight": 40,
                      }
                    }
                  >
                    Make sure nobody is looking at your screen. 
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Bold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      MetaMask Support will never request this.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 4,
                  }
                }
              >
                Enter password to continue
              </Text>
              <TextInput
                keyboardAppearance="light"
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Password"
                placeholderTextColor="#9ca1af"
                secureTextEntry={true}
                style={
                  {
                    "borderColor": "#b7bbc8",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "color": "#121314",
                    "padding": 10,
                  }
                }
                testID="private-credential-password-text-input"
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 10,
                  }
                }
                testID="password-warning"
              />
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            [
              {
                "flex": 0,
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    false,
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View />
  <View />
</View>
`;

exports[`RevealPrivateCredential renders reveal SRP correctly when the credential is passed via the route object 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentContainerStyle={
        {
          "flex": 1,
        }
      }
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <RCTScrollView
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontWeight": "400",
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Your
                 
                <Text
                  accessibilityRole="text"
                  onPress={[Function]}
                  style={
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Secret Recovery Phrase
                </Text>
                 
                gives
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  full access to your wallet, funds and accounts.


                </Text>
                MetaMask is a
                 
                <Text
                  accessibilityRole="text"
                  onPress={[Function]}
                  style={
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  non-custodial wallet.
                   
                </Text>
                That means,
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  you are the owner of your Secret Recovery Phrase.
                </Text>
              </Text>
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "backgroundColor": "#ca35421a",
                      "borderColor": "#ca3542",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "marginTop": 16,
                      "padding": 20,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexShrink": 1,
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <SvgMock
                    color="#ca3542"
                    fill="currentColor"
                    height={24}
                    name="EyeSlash"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                        "marginLeft": 10,
                        "marginRight": 40,
                      }
                    }
                  >
                    Make sure nobody is looking at your screen. 
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Bold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      MetaMask Support will never request this.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 4,
                  }
                }
              >
                Enter password to continue
              </Text>
              <TextInput
                keyboardAppearance="light"
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Password"
                placeholderTextColor="#9ca1af"
                secureTextEntry={true}
                style={
                  {
                    "borderColor": "#b7bbc8",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "color": "#121314",
                    "padding": 10,
                  }
                }
                testID="private-credential-password-text-input"
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 10,
                  }
                }
                testID="password-warning"
              />
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            [
              {
                "flex": 0,
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    false,
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View />
  <View />
</View>
`;

exports[`RevealPrivateCredential renders reveal private key correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentContainerStyle={
        {
          "flex": 1,
        }
      }
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <RCTScrollView
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontWeight": "400",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                flexDirection="column"
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "column",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 16,
                      "height": 32,
                      "marginBottom": 8,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#C7144F",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        undefined,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711651,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.46329603511986217,
                              0.8862035792312145,
                              -0.8862035792312145,
                              0.46329603511986217,
                              29.06767649409735,
                              -8.290603334655817,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4280576225,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.5778576243835052,
                              0.8161375900801603,
                              -0.8161375900801603,
                              -0.5778576243835052,
                              51.62016714634118,
                              17.239003094412087,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278407261,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.7046342099635947,
                              -0.7095707365365209,
                              0.7095707365365209,
                              0.7046342099635947,
                              -25.225718686778755,
                              -4.611026307883787,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Medium",
                      "fontSize": 18,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 8,
                    }
                  }
                >
                  Account 1
                </Text>
                <View
                  alignItems="center"
                  flexDirection="row"
                  justifyContent="center"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      {
                        "backgroundColor": "#4459ff1a",
                        "borderRadius": 999,
                        "color": "#4459ff",
                        "gap": 4,
                        "marginBottom": 16,
                        "padding": 8,
                      },
                    ]
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist Medium",
                        "fontSize": 18,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    0xC4955...4D272
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <RNGestureHandlerButton
                      collapsable={false}
                      delayLongPress={600}
                      enabled={true}
                      exclusive={true}
                      handlerTag={1}
                      handlerType="NativeViewGestureHandler"
                      innerRef={null}
                      onGestureHandlerEvent={[Function]}
                      onGestureHandlerStateChange={[Function]}
                      rippleColor="transparent"
                      style={
                        [
                          undefined,
                          {
                            "cursor": undefined,
                          },
                        ]
                      }
                      testID="wallet-account-copy-button"
                      touchSoundDisabled={false}
                    >
                      <View
                        accessible={true}
                        collapsable={false}
                        style={
                          {
                            "opacity": 1,
                            "padding": 4,
                          }
                        }
                      >
                        <SvgMock
                          color="#4459ff"
                          fill="currentColor"
                          height={24}
                          name="Copy"
                          style={
                            {
                              "height": 24,
                              "width": 24,
                            }
                          }
                          width={24}
                        />
                      </View>
                    </RNGestureHandlerButton>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#ca35421a",
                    "borderColor": "#ca3542",
                    "borderLeftWidth": 4,
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 8,
                  }
                }
                testID="banneralert"
              >
                <View
                  style={
                    {
                      "marginRight": 8,
                    }
                  }
                >
                  <SvgMock
                    color="#ca3542"
                    fill="currentColor"
                    height={24}
                    name="Danger"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Medium",
                        "fontSize": 18,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Never disclose this key.
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Anyone with your private key can steal any assets held in your account.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 4,
                  }
                }
              >
                Enter password to continue
              </Text>
              <TextInput
                keyboardAppearance="light"
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Password"
                placeholderTextColor="#9ca1af"
                secureTextEntry={true}
                style={
                  {
                    "borderColor": "#b7bbc8",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "color": "#121314",
                    "padding": 10,
                  }
                }
                testID="private-credential-password-text-input"
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 10,
                  }
                }
                testID="password-warning"
              />
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            [
              {
                "flex": 0,
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    false,
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View />
  <View />
</View>
`;

exports[`RevealPrivateCredential renders with a custom selectedAddress 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentContainerStyle={
        {
          "flex": 1,
        }
      }
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={false}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <RCTScrollView
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "color": "#121314",
                    "fontFamily": "CentraNo1-Book",
                    "fontWeight": "400",
                  },
                ]
              }
            >
              <View
                alignItems="center"
                flexDirection="column"
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "column",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 16,
                      "height": 32,
                      "marginBottom": 8,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#C7144F",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        undefined,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711651,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.46329603511986217,
                              0.8862035792312145,
                              -0.8862035792312145,
                              0.46329603511986217,
                              29.06767649409735,
                              -8.290603334655817,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4280576225,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.5778576243835052,
                              0.8161375900801603,
                              -0.8161375900801603,
                              -0.5778576243835052,
                              51.62016714634118,
                              17.239003094412087,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278407261,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.7046342099635947,
                              -0.7095707365365209,
                              0.7095707365365209,
                              0.7046342099635947,
                              -25.225718686778755,
                              -4.611026307883787,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Medium",
                      "fontSize": 18,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 8,
                    }
                  }
                >
                  Account 1
                </Text>
                <View
                  alignItems="center"
                  flexDirection="row"
                  justifyContent="center"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      {
                        "backgroundColor": "#4459ff1a",
                        "borderRadius": 999,
                        "color": "#4459ff",
                        "gap": 4,
                        "marginBottom": 16,
                        "padding": 8,
                      },
                    ]
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist Medium",
                        "fontSize": 18,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    0xC4955...4D272
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <RNGestureHandlerButton
                      collapsable={false}
                      delayLongPress={600}
                      enabled={true}
                      exclusive={true}
                      handlerTag={2}
                      handlerType="NativeViewGestureHandler"
                      innerRef={null}
                      onGestureHandlerEvent={[Function]}
                      onGestureHandlerStateChange={[Function]}
                      rippleColor="transparent"
                      style={
                        [
                          undefined,
                          {
                            "cursor": undefined,
                          },
                        ]
                      }
                      testID="wallet-account-copy-button"
                      touchSoundDisabled={false}
                    >
                      <View
                        accessible={true}
                        collapsable={false}
                        style={
                          {
                            "opacity": 1,
                            "padding": 4,
                          }
                        }
                      >
                        <SvgMock
                          color="#4459ff"
                          fill="currentColor"
                          height={24}
                          name="Copy"
                          style={
                            {
                              "height": 24,
                              "width": 24,
                            }
                          }
                          width={24}
                        />
                      </View>
                    </RNGestureHandlerButton>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#ca35421a",
                    "borderColor": "#ca3542",
                    "borderLeftWidth": 4,
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "padding": 12,
                    "paddingLeft": 8,
                  }
                }
                testID="banneralert"
              >
                <View
                  style={
                    {
                      "marginRight": 8,
                    }
                  }
                >
                  <SvgMock
                    color="#ca3542"
                    fill="currentColor"
                    height={24}
                    name="Danger"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Medium",
                        "fontSize": 18,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Never disclose this key.
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Anyone with your private key can steal any assets held in your account.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "padding": 20,
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 4,
                  }
                }
              >
                Enter password to continue
              </Text>
              <TextInput
                keyboardAppearance="light"
                onChangeText={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Password"
                placeholderTextColor="#9ca1af"
                secureTextEntry={true}
                style={
                  {
                    "borderColor": "#b7bbc8",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "color": "#121314",
                    "padding": 10,
                  }
                }
                testID="private-credential-password-text-input"
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ca3542",
                    "fontFamily": "CentraNo1-Book",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 10,
                  }
                }
                testID="password-warning"
              />
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            [
              {
                "flex": 0,
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              },
              undefined,
            ]
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={true}
            style={
              [
                [
                  {
                    "borderRadius": 12,
                    "justifyContent": "center",
                    "padding": 15,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#4459ff",
                    "borderWidth": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    false,
                    {},
                    {},
                  ],
                ],
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="reveal-private-credential-next-button"
          >
            <Text
              style={
                [
                  {
                    "color": "#007aff",
                    "fontSize": 17,
                    "fontWeight": "500",
                    "textAlign": "center",
                  },
                  {
                    "color": "#dcdcdc",
                  },
                  [
                    {
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "textAlign": "center",
                    },
                    {
                      "color": "#4459ff",
                    },
                    undefined,
                  ],
                  {
                    "opacity": 0.6,
                  },
                ]
              }
            >
              Next
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View />
  <View />
</View>
`;
